--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ openai = "^1.3.0"
 yfinance = "^0.2.32"
 pandas = "^2.1.0"
 python-dotenv = "^1.0.0"
+requests = "^2.31.0"
 
 [build-system]
 requires = ["poetry-core>=2.0.0"]
